pp2/samples/tested/interface.decaf.test

*** Error line 2.
   Color GetColor();
   ^^^^^
*** syntax error

